package app.exception;

public class ApiClientException extends ApiException {
    public ApiClientException(String message) {
        super(message);
    }
}
