package app.exception;

public class ApiServerException extends ApiException {
    public ApiServerException(String message) {
        super(message);
    }
}
